--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -7,12 +7,7 @@
 </head>
 
 <body>
-    <h1 id="id0" class="title">DOM Tree</h1>
-    <p>Hello world</p>
-    <input type="text" value="asd">
-    <script>
-        console.log('aaaaaaaaaaaaaa')
-    </script>
+    <div id="container"></div>
     <script src='main.js'></script>
 </body>
 
