--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -8,6 +8,15 @@
 
 <body>
     <div id="container"></div>
+    <table id="tbl">
+        <tr>
+            <td>Người dùng</td>
+            <td>Tên thang máy</td>
+            <td>Vào tầng</td>
+            <td>Ra tầng</td>
+            <td>Thời gian</td>
+        </tr>
+    </table>
     <script src='main.js'></script>
 </body>
 
