--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset='utf-8'>
+  <head>
+    <meta charset="utf-8" />
     <title>DOM Tree</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="container"></div>
     <table id="tbl">
-        <tr>
-            <td>Người dùng</td>
-            <td>Tên thang máy</td>
-            <td>Vào tầng</td>
-            <td>Ra tầng</td>
-            <td>Thời gian</td>
-        </tr>
+      <tr>
+        <td>Người dùng</td>
+        <td>Tên thang máy</td>
+        <td>Vào tầng</td>
+        <td>Ra tầng</td>
+        <td>Thời gian</td>
+        <td>ID</td>
+      </tr>
     </table>
-    <script src='main.js'></script>
-</body>
-
+    <script src="main.js"></script>
+  </body>
 </html>
