--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset='utf-8'>
+  <head>
+    <meta charset="utf-8" />
     <title>DOM Tree</title>
-</head>
+    <style>
+      table {
+        border: 1px solid;
+        border-radius: 4px;
+      }
+    </style>
+  </head>
 
-<body>
-    <div id="container"></div>
-    <table id="tbl">
-        <tr>
-            <td>Người dùng</td>
-            <td>Tên thang máy</td>
-            <td>Vào tầng</td>
-            <td>Ra tầng</td>
-            <td>Thời gian</td>
-        </tr>
-    </table>
-    <script src='main.js'></script>
-</body>
-
+  <body>
+    <div id="container">
+      <table border="1">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Gender</th>
+            <th>Lift number</th>
+            <th>From</th>
+            <th>To</th>
+            <th>Year</th>
+          </tr>
+        </thead>
+        <tbody id="body-table"></tbody>
+      </table>
+    </div>
+    <script src="main.js"></script>
+  </body>
 </html>
