--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -13,18 +13,31 @@
 
   <body>
     <div id="container">
-      <table border="1">
+      <table border="1" id="table1">
+        <thead>
+          <tr>
+            <!-- <th>Name</th>
+            <th>Gender</th> -->
+            <th>Lift number</th>
+            <th>From</th>
+            <th>&nbsp; To &nbsp;</th>
+            <!-- <th>Year</th> -->
+            <th>Function</th>
+          </tr>
+        </thead>
+        <tbody id="body-table1"></tbody>
+      </table>
+    </br>
+      <table border="1" cellspacing="0" style="display: none" id="table2" >
         <thead>
           <tr>
             <th>Name</th>
             <th>Gender</th>
-            <th>Lift number</th>
-            <th>From</th>
-            <th>To</th>
             <th>Year</th>
+            <th>Note</th>
           </tr>
         </thead>
-        <tbody id="body-table"></tbody>
+        <tbody id="body-table2"></tbody>
       </table>
     </div>
     <script src="main.js"></script>
