--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset='utf-8'>
+  <head>
+    <meta charset="utf-8" />
     <title>DOM Tree</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="container"></div>
     <table id="tbl">
-        <tr>
-            <td>Người dùng</td>
-            <td>Tên thang máy</td>
-            <td>Vào tầng</td>
-            <td>Ra tầng</td>
-            <td>Thời gian</td>
-        </tr>
-    </table>
-    <script src='main.js'></script>
-</body>
+      <tr>
+        <td class="cl1">Tên tháng máy</td>
+        <td class="cl1">Vào tầng</td>
+        <td class="cl1">Ra tầng</td>
+        <td class="cl1">Thời gian</td>
+        <td class="cl1">Chức năng </td>
+      </tr>
 
+    </table>
+    <script src="main.js"></script>
+    <div id="div1" style="width:400px; border: solid; ">
+      <h2 id="txt"></h2>
+      <h2 id="txt1"></h2>
+      <h2 id="txt2"></h2>
+      <h2 id="txt3"></h2>
+      <span style="display: inline-flex; align-items: center;">
+        <input type="text" name="firstname">
+        <button type="button">Ghi chú</button>
+      </span>
+      
+      </div>
+  </body>
 </html>
