--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -10,13 +10,14 @@
     <div id="container"></div>
     <table id="tbl">
         <tr>
-            <td>Người dùng</td>
-            <td>Tên thang máy</td>
             <td>Vào tầng</td>
             <td>Ra tầng</td>
             <td>Thời gian</td>
+            <td>Mở rộng</td>
         </tr>
     </table>
+    <div id="text"></div>
+    <div id="note"></div>
     <script src='main.js'></script>
 </body>
 
