--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -3,20 +3,30 @@
   <head>
     <meta charset="utf-8" />
     <title>DOM Tree</title>
+    <style>
+      #container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-around;
+      }
+      #note {
+        border: none;
+        outline: none;
+      }
+    </style>
   </head>
 
   <body>
-    <div id="container"></div>
-    <table id="tbl">
-      <tr>
-        <td>Người dùng</td>
-        <td>Tên thang máy</td>
-        <td>Vào tầng</td>
-        <td>Ra tầng</td>
-        <td>Thời gian</td>
-        <td>ID</td>
-      </tr>
-    </table>
+    <div id="container">
+      <div class="flexitem">
+        <table id="table" border="1"></table>
+      </div>
+      <div class="flexitem">
+        <table id="tableDetail" border="1"></table>
+      </div>
+    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
