--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -15,6 +15,7 @@
             <td>Vào tầng</td>
             <td>Ra tầng</td>
             <td>Thời gian</td>
+            <td>Ghi chú</td>
         </tr>
     </table>
     <script src='main.js'></script>
