--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -18,9 +18,11 @@
       <td>Ghi chú</td>
     </tr>
   </table>
+  <button onclick="click()">Test</button>
   <div id="text"></div>
   <div id="note"></div>
   <script src="main.js"></script>
+
 </body>
 
 </html>
