--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -20,6 +20,11 @@
   </table>
   <div id="text"></div>
   <div id="note"></div>
+
+  <!-- <input id="1" type="text" onkeydown="testKeyboard(event)">
+  <input id="2" type="text" onkeydown="testKeyboard(2)">
+  <input id="3" type="text" onkeydown="testKeyboard(event)">
+  <button onmouseenter="test()">test</button> -->
   <script src="main.js"></script>
 </body>
 
