--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -20,6 +20,16 @@
   </table>
   <div id="text"></div>
   <div id="note"></div>
+  <!-- <button onmouseenter="test()">test</button>
+  <button onclick="test()">test2</button>
+  <input type="text" onchange="testkeyboard()"> -->
+
+  <!-- <input id="1" type="text" onchange="testkeyboard(event)"> -->
+  <!-- <input id="2" type="text" onkeydown="testkeyboard(event)"> -->
+  <!-- <input id="3" type="text" onkeyup="testkeyboard()"> -->
+
+
+
   <script src="main.js"></script>
 </body>
 
