--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -7,19 +7,45 @@
 </head>
 
 <body>
-  <div id="container"></div>
+  <div id="container">
+    <div class="flexitem">
+      <table id="table" border="1"></table>
+    </div>
+    <br />
+    <div class="flexitem">
+      <select
+        name="selectTable"
+        id="selectTable"
+        onchange="validateSelectBox(this)"
+      >
+        <option value="">-- Form thêm dữ liệu --</option>
+        <option value="1">Lifts</option>
+        <option value="2">Users</option>
+        <option value="3">Actions</option>
+      </select>
+      <div id="addInfo"></div>
+    </div>
+    <div class="flexitem">
+      <table id="tableDetail"></table>
+    </div>
+  </div>
   <table id="tbl">
-    <tr>
+    <!-- <tr>
       <!-- <td>Người dùng</td>
         <td>Tên thang máy</td> -->
-      <td>Vào tầng</td>
+      <!-- <td>Vào tầng</td>
       <td>Ra tầng</td>
       <td>Thời gian</td>
-      <td>Ghi chú</td>
-    </tr>
+      <td>Ghi chú</td> -->
+    </tr> -->
   </table>
   <div id="text"></div>
   <div id="note"></div>
+
+  <!-- <input id="1" type="text" onkeydown="testKeyboard(event)">
+  <input id="2" type="text" onkeydown="testKeyboard(2)">
+  <input id="3" type="text" onkeydown="testKeyboard(event)">
+  <button onmouseenter="test()">test</button> -->
   <script src="main.js"></script>
 </body>
 
