--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -5,22 +5,34 @@
   <meta charset="utf-8" />
   <title>DOM Tree</title>
 </head>
+<style>
+  .hehe{
+    text-decoration: underline;
+  }
+</style>
 
 <body>
   <div id="container"></div>
-  <table id="tbl">
+  <h1 id="header" class="header">duong</h1>
+  <!-- <table id="tbl">
     <tr>
-      <!-- <td>Người dùng</td>
-        <td>Tên thang máy</td> -->
+      <td>Người dùng</td>
+        <td>Tên thang máy</td>
       <td>Vào tầng</td>
       <td>Ra tầng</td>
       <td>Thời gian</td>
       <td>Ghi chú</td>
     </tr>
-  </table>
-  <div id="text"></div>
-  <div id="note"></div>
+  </table> -->
+  <select name="" id="nameSelect">
+    <option value=""></option>
+  </select>
+
+  <select name="" id="liftSelect">
+    <option value=""></option>
+  </select>
   <!-- <button onmouseenter="test()">test</button>
+    <div id="text"></div>
   <button onclick="test()">test2</button>
   <input type="text" onchange="testkeyboard()"> -->
 
