--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -24,7 +24,8 @@
   </select>
   <input id="fromInput" type="number" placeholder="Vào tầng">
   <input id="toInput" type="number" placeholder="Ra tâng">
-  <!-- <button onmouseenter="test()">test</button> -->
+  <button onclick="onSave()">Lưu</button>
+  <hr>
   <script src="main.js"></script>
 </body>
 
