--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <title>DOM Tree</title>
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.2/css/bootstrap.min.css">
   <style>
     .hehehe {
       text-decoration: underline;
@@ -24,7 +27,7 @@
   </select>
   <input id="fromInput" type="number" placeholder="Vào tầng">
   <input id="toInput" type="number" placeholder="Ra tâng">
-  <button onclick="onSave()">Lưu</button>
+  <button class="btn btn-success" onclick="onSave()">Lưu</button>
   <hr>
   <script src="main.js"></script>
 </body>
