--- a/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
+++ b/DOM - Local storage/1.2.1. DOM Selector/1. dom-tree/index.html
@@ -4,14 +4,6 @@
 <head>
   <meta charset="utf-8" />
   <title>DOM Tree</title>
-  <style>
-    .hehehe {
-      text-decoration: underline;
-    }
-    .hide {
-      display: none;
-    }
-  </style>
 </head>
 
 <body>
@@ -30,9 +22,12 @@
   <input id="fromInput" type="number" placeholder="Vào tầng">
   <input id="toInput" type="number" placeholder="Ra tâng">
   <input id="noteInput" type="text" placeholder="Ghi chú">
-  <button id="btnAdd" onclick="onCreate()">Tạo mới</button>
-  <button id="btnEdit" class=" hide" onclick="onSave()">Lưu</button>
-  <button id="btnCancel" class=" hide" onclick="onCancel()">Hủy</button>
+  <div>
+    <button id="btnAdd" onclick="onCreate()">Tạo mới</button>
+    <button id="btnEdit" class=" hide" onclick="onSave()">Lưu</button>
+    <button id="btnCancel" class=" hide" onclick="onCancel()">Hủy</button>
+  </div>
+
 
   
   <hr>
